--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "title": "Grayscale",
-    "name": "startbootstrap-grayscale",
+    "title": "Design Brigade",
+    "name": "design-brigade",
     "version": "7.0.0",
     "scripts": {
         "build": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
@@ -21,15 +21,15 @@
         "theme",
         "template"
     ],
-    "homepage": "https://startbootstrap.com/theme/grayscale",
+    "homepage": "http://design-brigade.github.io",
     "bugs": {
         "url": "https://github.com/StartBootstrap/startbootstrap-grayscale/issues",
-        "email": "feedback@startbootstrap.com"
+        "email": "syedayasoobf@gmail.com"
     },
     "license": "MIT",
-    "author": "Start Bootstrap",
+    "author": "SYF",
     "contributors": [
-        "David Miller (https://davidmiller.io/)"
+        "SYF (https://davidmiller.io/)"
     ],
     "repository": {
         "type": "git",
